--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 td {
     padding: 5px;
 }
+
 th {
     text-align: left;
 }
@@ -14,10 +15,20 @@ th {
     /*Add Styles here*/
 }
 
-.name-label, .description-label, .owner-label, .language-label, .url-label, .watchers-label {
+.name-label,
+.description-label,
+.owner-label,
+.language-label,
+.url-label,
+.watchers-label {
     /*Add Styles here*/
 }
 
-.name, .description, .owner, .language, .url, .watchers {
+.name,
+.description,
+.owner,
+.language,
+.url,
+.watchers {
     /*Add Styles here*/
 }
